# Agentic-MM-RAG

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  __init__.py  api.py  batch_runner.py  config.py  embeddings.py  pyproject.toml  results.py  runtime.py  schemas.py  setup.py
.github/workflows/: ci.yml
agent/: __init__.py  contracts.py  decision.py  evidence_quality.py  hook.py  prompts.py  roles.py  runner.py  runtime_types.py  subagent.py  types.py
data/: README.md  __init__.py  ingest_docs_raganything.py  ingest_videos_videorag.py  ingestion.env.example
examples/collection0/: README.md  answers.jsonl  summary.json
orchestrator/: __init__.py  evidence_audit.py  evidence_board.py  evidence_io.py  evidence_pool.py  loop.py  tools.py  types.py
orchestrator/evidence/: __init__.py  audit.py  board.py  io.py  pool.py  quality.py
providers/: __init__.py  base.py  openai_compat.py
tests/: test_generation_sufficiency.py  test_model_defaults.py  test_orchestrator_isolation.py  test_public_api.py  test_runtime_enforced_write_evidence.py  test_schemas.py  test_scoring_generalization.py  test_tool_contracts.py  test_tool_response_serialization.py
tools/: __init__.py  base.py  common.py  context.py  doc.py  loader.py  metadata.py  names.py  registry.py  schema.py  surface.py  video.py
tools/runtime/: __init__.py  backends.py  contracts.py  corpus.py  evidence.py  filters.py  runtime_backends.py  scoring.py  types.py
tools/runtime/stores/: __init__.py  doc_store.py  graph.py  json_utils.py  vector.py  video_store.py
